chore: 修改 package.json 中的项目名

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "wo-bu-hui-qi-ming",
+    "name": "web-for-sfs",
     "version": "0.0.0",
     "private": true,
     "type": "module",
