--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "build": "run-p type-check \"build-only {@}\" --",
         "preview": "vite preview",
         "build-only": "vite build",
-        "type-check": "vue-tsc --build"
+        "type-check": "vue-tsc --build",
+        "format": "prettier . --write"
     },
     "dependencies": {
         "@vueuse/core": "^13.9.0",
@@ -29,6 +30,7 @@
         "@vue/tsconfig": "^0.7.0",
         "naive-ui": "^2.42.0",
         "npm-run-all2": "^8.0.4",
+        "prettier": "3.6.2",
         "typescript": "~5.8.0",
         "vfonts": "^0.0.3",
         "vite": "^7.0.6",
