--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,4 @@
 {
     "tabWidth": 4,
-    "singleAttributePerLine": true,
-    "vueIndentScriptAndStyle": true
+    "singleAttributePerLine": true
 }
